modify margin-top to 0

--- a/app/css/card-box.css
+++ b/app/css/card-box.css
@@ -8,15 +8,19 @@
 
     &__content {
         position: relative;
-        padding: 0 15px 45px;
+        padding: 30px 30px 110px;
+
+        > h2, p {
+            margin-top: 0;
+        }
 
         &__detail {
             text-align: justify;
         }
         &__action {
             position: absolute;
-            left: 15px;
-            right: 15px;
+            left: 30px;
+            right: 30px;
             bottom: 0;
             display: flex;
             justify-content: space-between;
