--- a/app/css/card-box.css
+++ b/app/css/card-box.css
@@ -1,6 +1,8 @@
 .card {
     width: 50%;
+    max-width: 400px;
     border: 1px solid #efefef;
+    color: #666;
 
     &__image {
 
@@ -10,8 +12,19 @@
         position: relative;
         padding: 30px 30px 110px;
 
-        > h2, p {
+        > h2 {
+            margin: 0 auto;
+            color: #444;
+        }
+
+        p {
             margin-top: 0;
+            margin-bottom: 15px;
+        }
+
+        .sub-title {
+            color: #e76c67;
+            font-weight: 700;       
         }
 
         &__detail {
@@ -22,8 +35,32 @@
             left: 30px;
             right: 30px;
             bottom: 0;
+            padding: 30px 0;
             display: flex;
             justify-content: space-between;
+            border-top: 1px solid #efefef;
+
+            .read > a {
+                display: block;
+                color: #fff;
+                background: #e76c67;
+                border: 1px solid #E76C67;
+                padding: .75rem 1rem;
+                font-weight: 700;
+                text-align: center;
+                font-size: 1rem;
+
+                &:hover,
+                &:focus {
+                    background: darken(#E76C67, 10%);
+                    border: 1px solid darken(#E76C67, 10%);
+                }
+            }
+
+            a {
+                color: #e76c67;
+                text-decoration: none; 
+            }
         }
     }
 }
